# eventful_qualm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: auto_close_prs.yml  ci.yml  pull_request_template.md
apps/agent/: __main__.py  commands.py  compose.py  settings.py
apps/agent/workers/: capture_worker.py
apps/coordinator/: __main__.py  compose.py  settings.py  tui.py
configs/profiles/: dev.toml  vm1.toml  vm1_monk.toml  vm2.toml  vm2_shaman.toml
configs/rois/: eq_1916x1928.toml
docs/: index.md
docs/adr/: 0001-hexagonal-architecture.md  0002-ipc-messaging.md  0003-config-strategy.md  0004-testing-strategy.md  0005-ipc-wire-spec.md  0006-screen-capture-adapter.md  0007-adapter-naming-and-fakes-policy.md  _template.md
docs/design/: diagrams.md
libs/adapters/dx_capture/: __init__.py  fakes.py  mss.py
libs/adapters/ipc_inproc/: __init__.py  inproc.py
libs/adapters/ipc_zmq/: __init__.py  fakes.py  zmq.py
libs/adapters/telemetry/: __init__.py  fakes.py
libs/adapters/time/: __init__.py  fakes.py
libs/adapters/win_input/: __init__.py  fakes.py
libs/domain/: types.py
libs/domain/agent/: __init__.py  model.py  service.py
libs/ports/: __init__.py  input.py  ipc.py  perf.py  telemetry.py  time.py  vision.py
libs/shared/config/: loader.py
libs/shared/contracts/: __init__.py
libs/shared/contracts/v1/: __init__.py  commands.py  ipc_wire.py  telemetry.py
scripts/: tree.py  window_probe.py  window_roi_ocr_check.py  window_roi_picker.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_agent_smoke.py
tests/ports_contracts/: test_capture_mss_contract.py  test_fakes.py  test_ipc_fakes.py  test_ipc_inproc.py  test_ipc_zmq_contracts.py
tests/unit/: test_agent_service.py  test_app_compose.py  test_config_loader.py  test_contracts_import.py  test_coordinator_tui.py  test_telemetry.py  test_tui_import.py
